[package]
name = "annotation-rs"
version = "0.1.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Compile-time annotation parser for rust"
repository = "https://github.com/dark-flames/annotation-rs"
keywords = ["annotation"]
include = [
    "src/**",
    "derive/**",
    "helpers/**",
    "test_object/**",
    "test_macro/**",
    "tests/**",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "/Cargo.toml",
    "/README.md",
]
readme = "README.md"
edition = "2018"

[dependencies]
derive = { path = "./derive", version = "0.1.0" }
helpers = { path = "./helpers", version = "0.1.0" }
syn = "1.0"

[dev-dependencies]
test-object = { path = "./test_object", version = "0.1.0" }
test-macro = { path = "./test_macro", version = "0.1.0" }
float-cmp = "0.8.0"


[features]
annotation_reader=[]

[workspace]
members = [
    "derive",
    "helpers",
    "test_object",
    "test_macro"
]
