[package]
name = "annotation-rs"
version = "0.1.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Compile-time annotation parser for rust"
repository = "https://github.com/dark-flames/annotation-rs"
keywords = ["annotation"]
include = [
    "src/**",
    "derive/**",
    "helpers/**",
    "tests/**",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "/Cargo.toml",
    "/README.md",
]
readme = "README.md"
edition = "2018"

[dependencies]
derive = { package = "annotation-rs-codegen", path = "./derive", version = "0.1.0" }
helpers = { package = "annotation-rs-helpers", path = "./helpers", version = "0.1.0" }
syn = "1.0"

[dev-dependencies]
objects = { package = "annotations-test-objects", path = "tests/objects", version = "0.1.0" }
macros = { package = "annotation-rs-test-macros", path = "tests/macros", version = "0.1.0" }
float-cmp = "0.8.0"


[features]
annotation_reader=[]

[workspace]
members = [
    "derive",
    "helpers",
    "tests/objects",
    "tests/macros"
]
