[package]
name = "annotation-rs-codegen"
version = "0.1.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "proc-macro lib for annotation-rs"
repository = "https://github.com/dark-flames/annotation-rs"
include = [
    "/src/**",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/Cargo.toml",
    "/README.md",
]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helpers = { package = "annotation-rs-helpers", path = "../helpers", version = "0.1.0" }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.3.1"


[dependencies.syn]
version = "1.0"
features = ["fold", "full"]

[lib]
proc-macro = true
