[package]
name = "test-object"
version = "0.1.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
derive = { path = "../derive" }
annotation-rs = { path = "../"}
