[package]
name = "yui"
version = "0.1.2"
authors = ["dark-flames <dark_flames@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "An attribute reader generator for Rust"
repository = "https://github.com/dark-flames/Yui/yui"
keywords = ["yui", "attribute", "reader"]
include = ["src/*.rs", "crates-io.md", "LICENSE-APACHE", "LICENSE-MIT"]
readme = "crates-io.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yui_derive = { version = "0.1", path = "../yui_derive" }
syn = "1.0"

[dependencies.yui_internal]
version = "0.1"
path = "../yui_internal"


[features]
generate-reader=[]

