[package]
name = "yui_derive"
version = "0.1.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.yui]
version = "0.1"
path = "../yui"

[dependencies.syn]
version = "1.0.19"

[dependencies.quote]
version = "1.0.4"

[dependencies.proc-macro2]
version = "1.0.12"


[lib]
proc-macro = true