[package]
name = "yui_derive"
version = "0.1.3"
authors = ["dark-flames <dark_flames@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Internal derive and proc macro for Yui"
repository = "https://github.com/dark-flames/Yui/yui_derive"
keywords = ["yui", "attribute", "reader"]
readme = "crates-io.md"
include = ["src/*.rs", "crates-io.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.yui_internal]
version = "0.1"
path = "../yui_internal"

[dependencies.syn]
version = "1.0"
features = ["fold", "full"]

[dependencies.quote]
version = "1.0"

[dependencies.proc-macro2]
version = "1.0"

[dependencies.heck]
version = "0.3.1"

[dependencies.lazy_static]
 version = "1.4.0"

[lib]
proc-macro = true

[features]
