[package]
name = "yui_test"
version = "0.1.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.yui]
version = "0.1"
path = "../yui"

[dependencies.yui_derive]
version = "0.1"
path = "../yui_derive"

[lib]
proc-macro = true
