[package]
name = "yui_test_attribute"
version = "0.1.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.yui]
version = "0.1.0"
path = "../yui"

[dependencies.syn]
version = "1.0"

[dependencies.proc-macro2]
version = "1.0"

[dependencies.quote]
version = "1.0"
